--- a/app/src/main/res/layout/content_statistic.xml
+++ b/app/src/main/res/layout/content_statistic.xml
@@ -94,22 +94,26 @@
                 android:id="@+id/ratingtable"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="5dp">
+
+                android:divider="@drawable/sgera"
+                android:showDividers="middle"
+               >
 
                 <TableRow
-                    style="@style/Hyperlink"
-
+                    android:id="@+id/baserow"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:divider="?android:attr/listDivider"
                     android:gravity="center"
                     android:orientation="vertical">
+
 
                     <TextView
                         android:id="@+id/textView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
 
+                        android:layout_margin="5dp"
                         android:text="1." />
 
                     <TextView
@@ -146,160 +150,83 @@
                         android:layout_margin="5dp"
                         android:background="@drawable/flag_rus" />
 
+
+
                 </TableRow>
 
-                <TableRow
-                    style="@style/Hyperlink"
+
+                <LinearLayout
                     android:layout_width="match_parent"
-
                     android:layout_height="match_parent"
-                    android:gravity="center">
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:orientation="vertical">
+
+                    <View
+                        android:id="@+id/rowdevider"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:background="?android:attr/listDivider" />
+
+                </LinearLayout>
+                <TableRow
+                    android:id="@+id/baserow"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:divider="?android:attr/listDivider"
+                    android:gravity="center"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:layout_margin="5dp"
+                        android:text="1." />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/textView15"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
-
-                        android:text="2." />
-
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="Чинилин В. К."
+                        android:text="Петров Н. И."
                         android:textColor="@color/colorAccent"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView16"
+                        android:id="@+id/textView6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
-                        android:text="155 мс"
+                        android:text="150 мс"
                         android:textColor="@color/colorAccent" />
 
                     <TextView
-                        android:id="@+id/textView9"
+                        android:id="@+id/textView7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
-                        android:text="КМС"
+                        android:text="МС"
                         android:textColor="@color/colorAccent"
                         android:textSize="9sp" />
 
                     <TextView
-                        android:id="@+id/textView22"
-                        android:layout_width="30dp"
-                        android:layout_height="18dp"
-                        android:layout_margin="5dp"
-                        android:background="@drawable/flag_uk" />
-
-                </TableRow>
-
-                <TableRow
-                    style="@style/Hyperlink"
-                    android:layout_width="match_parent"
-
-                    android:layout_height="match_parent"
-                    android:gravity="center">
-
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="3." />
-
-                    <TextView
-                        android:id="@+id/textView17"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="Романов В. В."
-                        android:textColor="@color/colorAccent"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView10"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="161 мс"
-                        android:textColor="@color/colorAccent" />
-
-                    <TextView
-                        android:id="@+id/textView11"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="1 разряд"
-                        android:textColor="@color/colorAccent"
-                        android:textSize="9sp" />
-
-
-                    <TextView
-                        android:id="@+id/textView23"
+                        android:id="@+id/textView21"
                         android:layout_width="30dp"
                         android:layout_height="18dp"
                         android:layout_margin="5dp"
                         android:background="@drawable/flag_rus" />
 
-                </TableRow>
-
-                <TableRow
-                    style="@style/Hyperlink"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/app_top100">
-
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="4." />
-
-
-                    <TextView
-                        android:id="@+id/textView18"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="Кондрашев А. Б."
-                        android:textColor="@color/colorAccent"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView12"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="165 мс"
-                        android:textColor="@color/colorAccent" />
-
-
-                    <TextView
-                        android:id="@+id/textView13"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="б/р"
-                        android:textColor="@color/colorAccent"
-                        android:textSize="9sp" />
-
-                    <TextView
-                        android:id="@+id/textView24"
-                        android:layout_width="30dp"
-                        android:layout_height="18dp"
-                        android:layout_margin="5dp"
-                        android:background="@drawable/flag_ca" />
 
 
                 </TableRow>
+
             </TableLayout>
+
+
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
