--- a/app/src/main/res/layout/content_statistic.xml
+++ b/app/src/main/res/layout/content_statistic.xml
@@ -95,14 +95,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="20dp"
                 android:divider="@drawable/sgera"
-                android:showDividers="middle"
-               >
+                android:showDividers="middle">
 
                 <TableRow
                     android:id="@+id/baserow"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@android:color/holo_orange_light"
                     android:divider="?android:attr/listDivider"
                     android:gravity="center"
                     android:orientation="vertical">
@@ -113,7 +115,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
-                        android:layout_margin="5dp"
+                        android:layout_margin="0dp"
                         android:text="1." />
 
                     <TextView
@@ -121,7 +123,7 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
+                        android:layout_margin="0dp"
                         android:text="Петров Н. И."
                         android:textColor="@color/colorAccent"
                         android:textStyle="bold" />
@@ -130,26 +132,25 @@
                         android:id="@+id/textView6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
+                        android:layout_margin="0dp"
                         android:text="150 мс"
                         android:textColor="@color/colorAccent" />
-
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="МС"
-                        android:textColor="@color/colorAccent"
-                        android:textSize="9sp" />
 
                     <TextView
                         android:id="@+id/textView21"
                         android:layout_width="30dp"
                         android:layout_height="18dp"
-                        android:layout_margin="5dp"
+                        android:layout_margin="0dp"
                         android:background="@drawable/flag_rus" />
 
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="0dp"
+                        android:text="МС"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="9sp" />
 
 
                 </TableRow>
@@ -166,63 +167,11 @@
                         android:id="@+id/rowdevider"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginRight="0dp"
                         android:background="?android:attr/listDivider" />
 
                 </LinearLayout>
-                <TableRow
-                    android:id="@+id/baserow"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:divider="?android:attr/listDivider"
-                    android:gravity="center"
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:layout_margin="5dp"
-                        android:text="1." />
-
-                    <TextView
-                        android:id="@+id/textView15"
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="Петров Н. И."
-                        android:textColor="@color/colorAccent"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView6"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="150 мс"
-                        android:textColor="@color/colorAccent" />
-
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="МС"
-                        android:textColor="@color/colorAccent"
-                        android:textSize="9sp" />
-
-                    <TextView
-                        android:id="@+id/textView21"
-                        android:layout_width="30dp"
-                        android:layout_height="18dp"
-                        android:layout_margin="5dp"
-                        android:background="@drawable/flag_rus" />
-
-
-
-                </TableRow>
 
             </TableLayout>
 
