--- a/app/src/main/res/layout/tableow_tx5.xml
+++ b/app/src/main/res/layout/tableow_tx5.xml
@@ -2,4 +2,4 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="30dp"
     android:layout_height="18dp"
-    android:background="@drawable/flag_rus" />
+    android:background="@drawable/flag_null" />
