--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -263,42 +263,46 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView_RepeatNumbers"
+                android:id="@+id/textView_RepeatNumbers3"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_below="@id/seekBar"
-                android:layout_alignLeft="@id/seekBar"
+
                 android:layout_marginTop="8dp"
-                android:background="@drawable/ramkatextview_repeats"
+                android:layout_weight="0"
+                android:background="@drawable/ramkatextview_left_rigth2"
                 android:padding="10dp"
+                android:text="-"
                 android:textAlignment="center"
-                android:text="0" />
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView_RepeatNumbers"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/ramkatextview_repeats"
+                android:padding="20dp"
+                android:text="0"
+                android:textAlignment="center" />
+
+            <TextView
+                android:id="@+id/textView_RepeatNumbers2"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+
+                android:layout_marginTop="8dp"
+                android:layout_weight="0"
+                android:background="@drawable/ramkatextview_left_rigth"
+                android:padding="10dp"
+                android:text="+"
+                android:textAlignment="center" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/linearLayout_container_items"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/linearLayout_header_item"
-            android:layout_marginRight="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal">
 
-            <SeekBar
-                android:id="@+id/seekBar"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/graph"
-                android:layout_alignLeft="@id/graph"
-                android:layout_marginTop="0dp"
-                android:layout_marginBottom="10dp"
-
-                android:max="20"
-                android:progress="1"
-                android:thumb="@drawable/ic_repeat_black_24dp" />
-        </LinearLayout>
 
 
 
